--- a/about.html
+++ b/about.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="theme-color" content="#0066b3" />
     <title>About Innomentis — Edutech Platform for Robotics & AI</title>
     <meta name="description" content="About Innomentis — an edutech platform offering robotics based learning, AI smart learning and robotics workshops for children. Learn about our mission, vision and programmes." />
     <meta name="keywords" content="about innomentis, edutech platform, robotics based learning, ai smart learning, robotics workshop" />
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="https://innomentis.in/about.html" />
+    <link rel="preload" as="image" href="images/in_logo.png" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
     <meta property="og:title" content="About Innomentis — Edutech Platform for Robotics & AI" />
     <meta property="og:description" content="Learn how Innomentis brings hands-on robotics, AI learning and workshops to young learners through project-based STEM programs." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,8 +36,7 @@
     <nav class="main-nav">
       <div class="container nav-grid">
         <div class="brand">
-          <img src="images/in.png" alt="Innomentis" />
-          <span>Innomentis</span>
+          <img src="images/in_logo.png" alt="Innomentis" width="150" height="64" />
         </div>
         <button class="nav-toggle" type="button" aria-label="Toggle menu">
           <span></span>
@@ -381,6 +384,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
