--- a/courses.html
+++ b/courses.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="theme-color" content="#0066b3" />
     <title>Innomentis Courses — Robotics Based Learning & AI Programs</title>
     <meta name="description" content="Innomentis courses: robotics based learning, AI smart learning and hands-on programmes for schools and online students. Explore our course pathways and plans." />
     <meta name="keywords" content="innomentis courses, robotics course, ai ml course, robotics based learning, edutech platform" />
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="https://innomentis.in/courses.html" />
+    <link rel="preload" as="image" href="images/in_logo.png" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
     <meta property="og:title" content="Innomentis Courses — Robotics & AI Programs" />
     <meta property="og:description" content="Explore Innomentis course pathways: robotics tech courses, online one-on-one sessions, and AIML advanced learning for future-ready skills." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,8 +36,7 @@
     <nav class="main-nav">
       <div class="container nav-grid">
         <div class="brand">
-          <img src="images/in.png" alt="Innomentis" />
-          <span>Innomentis</span>
+          <img src="images/in_logo.png" alt="Innomentis" width="150" height="64" />
         </div>
         <button class="nav-toggle" type="button" aria-label="Toggle menu">
           <span></span>
@@ -580,6 +583,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
