--- a/contact.html
+++ b/contact.html
@@ -2,12 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="theme-color" content="#0066b3" />
     <title>Contact Innomentis — Book Robotics Demo & Workshops</title>
     <meta name="description" content="Contact Innomentis to book a demo class, enquiry for robotics workshops, AI smart learning programs, or school partnerships. Reach us via phone, email, or WhatsApp." />
     <meta name="keywords" content="contact innomentis, book demo, robotics workshop, edutech contact, ai smart learning" />
     <meta name="robots" content="index,follow" />
     <link rel="canonical" href="https://innomentis.in/contact.html" />
+    <link rel="preload" as="image" href="images/in_logo.png" />
+    <link rel="dns-prefetch" href="https://fonts.googleapis.com" />
+    <link rel="dns-prefetch" href="https://fonts.gstatic.com" />
     <meta property="og:title" content="Contact Innomentis — Book a Demo" />
     <meta property="og:description" content="Get in touch with Innomentis to book hands-on robotics and AI demo classes, workshops, and courses for young learners." />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,8 +36,7 @@
     <nav class="main-nav">
       <div class="container nav-grid">
         <div class="brand">
-          <img src="images/in.png" alt="Innomentis" />
-          <span>Innomentis</span>
+          <img src="images/in_logo.png" alt="Innomentis" width="150" height="64" />
         </div>
         <button class="nav-toggle" type="button" aria-label="Toggle menu">
           <span></span>
@@ -254,6 +257,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
   </body>
 </html>
