--- a/courses.html
+++ b/courses.html
@@ -290,10 +290,10 @@
             <a href="#" class="link-arrow">View More →</a>
           </article>
           <article class="tier-card">
-            <span class="plan-tag">25 Sessions</span>
-            <h4>Advanced Plan</h4>
-            <p>Master advanced robotics, sensors, AI, and competition prep.</p>
-            <a href="#" class="link-arrow">View More →</a>
+            <span class="plan-tag" 30 Sessions</span>
+              <h4>Advanced Plan</h4>
+              <p>Master advanced robotics, sensors, AI, and competition prep.</p>
+              <a href="#" class="link-arrow">View More →</a>
           </article>
         </div>
       </div>
